# codex-connector

./: .gitignore  AGENTS.md  Codex_Remote_Companion_PRD.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: custom-runner.md  demo.md  social-preview.html
examples/: custom_runner_template.py
src/codex_connector/: __init__.py  cli.py  codex_adapter.py  codex_sessions.py  commands.py  config.py  models.py  presence.py  rendering.py  runner.py  service.py  single_instance.py  state.py  telegram.py  telegram_runtime.py
tests/: test_cli.py  test_codex_adapter.py  test_codex_sessions.py  test_commands.py  test_config.py  test_presence.py  test_rendering.py  test_runner.py  test_service.py  test_single_instance.py  test_state.py  test_telegram.py  test_telegram_runtime.py
