[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-connector"
version = "0.1.0"
description = "Local bridge for driving Codex from Telegram"
requires-python = ">=3.11"

[project.scripts]
codex-connector = "codex_connector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
